Added JFoenix and fontawesomefx
Added jfoenix and fontawesomefx-fontawesome to client dependencies.